--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "lodash": "^4.17.11",
     "node-fetch": "latest",
     "react": "16.6.3",
     "react-native": "0.58.5",
@@ -23,7 +24,8 @@
     "jest": "24.1.0",
     "metro-react-native-babel-preset": "0.52.0",
     "node-fetch": "latest",
-    "react-test-renderer": "16.6.3"
+    "react-test-renderer": "16.6.3",
+    "rn-nodeify": "tradle/rn-nodeify"
   },
   "jest": {
     "preset": "react-native"
