--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -134,7 +134,7 @@ android {
 }
 
 dependencies {
-    implementation project(':react-native-randombytes')
+    implementation project(':react-native-aes-crypto')
     implementation project(':react-native-gesture-handler')
     implementation project(':react-native-vector-icons')
     implementation fileTree(dir: "libs", include: ["*.jar"])
