--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "elliptic": "^6.4.1",
+    "keccak": "^2.0.0",
+    "keccakjs": "^0.2.3",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "node-fetch": "latest",
     "react": "16.6.3",
     "react-native": "0.58.5",
-    "react-native-crypto": "^2.1.2",
+    "react-native-aes-crypto": "^1.3.3",
+    "react-native-ecc": "^2.1.0",
     "react-native-elements": "^1.0.0",
     "react-native-gesture-handler": "^1.0.15",
-    "react-native-randombytes": "^3.5.2",
+    "react-native-gifted-chat": "^0.7.2",
+    "react-native-iphone-x-helper": "^1.2.0",
     "react-native-vector-icons": "^6.3.0",
     "react-navigation": "^3.3.0"
   },
@@ -24,8 +30,7 @@
     "jest": "24.1.0",
     "metro-react-native-babel-preset": "0.52.0",
     "node-fetch": "latest",
-    "react-test-renderer": "16.6.3",
-    "rn-nodeify": "tradle/rn-nodeify"
+    "react-test-renderer": "16.6.3"
   },
   "jest": {
     "preset": "react-native"
