--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "debug": "^4.1.1",
     "elliptic": "^6.4.1",
     "keccak": "^2.0.0",
     "keccakjs": "^0.2.3",
@@ -21,8 +22,10 @@
     "react-native-gesture-handler": "^1.0.15",
     "react-native-gifted-chat": "^0.7.2",
     "react-native-iphone-x-helper": "^1.2.0",
+    "react-native-socketio": "^0.3.0",
     "react-native-vector-icons": "^6.3.0",
-    "react-navigation": "^3.3.0"
+    "react-navigation": "^3.3.0",
+    "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
     "babel-core": "^7.0.0-bridge.0",
